--- a/build.xml
+++ b/build.xml
@@ -971,7 +971,10 @@ url=${svn.entry.url}?pathrev=${svn.entry.commit.revision}
      debug="true"
      debuglevel="${debuglevel}"
      destdir="${test.classes}">
-      <classpath refid="cassandra.classpath"/>
+      <classpath>
+        <path refid="cassandra.classpath"/>
+        <pathelement location="${build.classes.cql}"/>
+      </classpath>
       <src path="${test.unit.src}"/>
       <src path="${test.long.src}"/>
       <src path="${test.src.driver}"/>
@@ -1023,6 +1026,7 @@ url=${svn.entry.url}?pathrev=${svn.entry.commit.revision}
         <classpath>
           <path refid="cassandra.classpath" />
           <pathelement location="${test.classes}"/>
+          <pathelement location="${build.classes.cql}"/>
           <path refid="cobertura.classpath"/>
           <pathelement location="${test.conf}"/>
           <fileset dir="${test.lib}">
