--- a/test/conf/cassandra.yaml
+++ b/test/conf/cassandra.yaml
@@ -15,7 +15,7 @@ column_index_size_in_kb: 4
 commitlog_directory: build/test/cassandra/commitlog
 saved_caches_directory: build/test/cassandra/saved_caches
 data_file_directories:
-    - build/test/cassandra/data
+    - build/test/cassandra/data:1
 disk_access_mode: mmap
 seed_provider:
     - class_name: org.apache.cassandra.locator.SimpleSeedProvider
